--- a/.github/workflows/check_branch.yml
+++ b/.github/workflows/check_branch.yml
@@ -1,4 +1,4 @@
-# This will be used to achieve [Misc #16094] later.
+# This will be used to achieve [Misc #16094] later...
 name: check_branch
 on: [pull_request]
 jobs:
